force-app/main/default/objects/Integration_Engine_Mapping__mdt/Integration_Engine_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Integration Engine Setting</label>
    <pluralLabel>Integration Engine Settings</pluralLabel>
</CustomObject>