force-app/main/default/objects/Integration_Engine_Mapping__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>