force-app/main/default/objects/Integration_Engine_Mapping__mdt/fields/Maximum_Retries__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Retries__c</fullName>
    <label>Maximum Retries</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>