force-app/main/default/objects/Integration_Engine_Mapping__mdt/fields/Retain__c.field-meta.xml
<CustomField>
    <fullName>Retain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retain</label>
    <type>Checkbox</type>
</CustomField>